--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -38,27 +38,27 @@
                             <li class="btn_fm_danhsachcd btn_li">
                                 <img class="listy_dw" src="./Images/icon-liststyle.svg" alt="">
                                 <img class="listy_hv" src="./Images/icon-liststyle-hv.svg" alt="">
-                                <a href="#">Size </a>
+                                <a asp-controller="Size" asp-action="AllSizeManager">Size </a>
                             </li>
                             <li class="btn_fm_danhsachcd btn_li">
                                 <img class="listy_dw" src="./Images/icon-liststyle.svg" alt="">
                                 <img class="listy_hv" src="./Images/icon-liststyle-hv.svg" alt="">
-                                <a href="#">Màu sắc</a>
+                                <a asp-controller="MauSac" asp-action="AllMauSacManager">Màu sắc</a>
                             </li>
                             <li class="btn_fm_danhsachcd btn_li">
                                 <img class="listy_dw" src="./Images/icon-liststyle.svg" alt="">
                                 <img class="listy_hv" src="./Images/icon-liststyle-hv.svg" alt="">
-                                <a href="#">Thương Hiệu</a>
+                                <a asp-controller="ChatLieu" asp-action="AllThuongHieuManager">Thương Hiệu</a>
+                            </li>
+                            <li class="btn_fm_danhsachcd btn_li" >
+                                <img class="listy_dw" src="./Images/icon-liststyle.svg" alt="">
+                                <img class="listy_hv" src="./Images/icon-liststyle-hv.svg" alt="">
+                                <a asp-controller="ChatLieu" asp-action="AllChatLieuManager">Chất liệu </a>
                             </li>
                             <li class="btn_fm_danhsachcd btn_li">
                                 <img class="listy_dw" src="./Images/icon-liststyle.svg" alt="">
                                 <img class="listy_hv" src="./Images/icon-liststyle-hv.svg" alt="">
-                                <a href="#">Chất liệu </a>
-                            </li>
-                            <li class="btn_fm_danhsachcd btn_li">
-                                <img class="listy_dw" src="./Images/icon-liststyle.svg" alt="">
-                                <img class="listy_hv" src="./Images/icon-liststyle-hv.svg" alt="">
-                                <a href="#">Thể loại </a>
+                                <a asp-controller="TheLoai" asp-action="AllTheLoaiManager">Thể loại </a>
                             </li>
                         </ul>
                     </li>
