--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/AllKhuyenMaiManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/AllKhuyenMaiManager.cshtml
@@ -7,7 +7,7 @@
 <h1>AllKhuyenMaiManager</h1>
 
 <p>
-    <a asp-action="CreateKhuyenMai" class="btn btn-primary">Create New</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -43,8 +43,9 @@
                 @Html.DisplayFor(modelItem => item.TrangThai)
             </td>
             <td>
-                           <a asp-action="KhuyenMaiDetail" asp-route-id="@item.MaKhuyenMai" class="btn status delivered">Update</a>
-                           <a asp-action="UpdateKhuyenMai" asp-route-id="@item.MaKhuyenMai" class="btn status tamkhoa"> Details</a>
+                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
 }
