chua validate sp

--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/AllKhuyenMaiManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/AllKhuyenMaiManager.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "AllKhuyenMaiManager";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>AllKhuyenMaiManager</h1>
