--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/MauSac/AllMauSacManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/MauSac/AllMauSacManager.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "AllMauSacManager";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>AllMauSacManager</h1>
