--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/MauSac/MauSacDetail.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/MauSac/MauSacDetail.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "MauSacDetail";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>MauSacDetail</h1>
