--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/MauSac/UpdateMauSac.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/MauSac/UpdateMauSac.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "UpdateMauSac";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>UpdateMauSac</h1>
