--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Size/SizeDetail.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Size/SizeDetail.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "SizeDetail";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>SizeDetail</h1>
