--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Size/UpdateSize.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Size/UpdateSize.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "UpdateSize";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>UpdateSize</h1>
