--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/AllTheLoaiManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/AllTheLoaiManager.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "AllTheLoaiManager";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>AllTheLoaiManager</h1>
