--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/CreateTheLoai.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/CreateTheLoai.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "CreateTheLoai";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>CreateTheLoai</h1>
