--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/UpdateTheLoai.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/UpdateTheLoai.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "UpdateTheLoai";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>UpdateTheLoai</h1>
