--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/ThuongHieuDetail.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/ThuongHieuDetail.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "ThuongHieuDetail";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>ThuongHieuDetail</h1>
