--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/UpdateThuongHieu.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/UpdateThuongHieu.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "UpdateThuongHieu";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>UpdateThuongHieu</h1>
