--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/CreateKhuyenMai.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/CreateKhuyenMai.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "CreateKhuyenMai";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>CreateKhuyenMai</h1>
