--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/KhuyenMaiDetail.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/KhuyenMaiDetail.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "KhuyenMaiDetail";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>KhuyenMaiDetail</h1>
