--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/UpdateKhuyenMai.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/UpdateKhuyenMai.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "UpdateKhuyenMai";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>UpdateKhuyenMai</h1>
