--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/MauSac/CreateMauSac.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/MauSac/CreateMauSac.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "CreateMauSac";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>CreateMauSac</h1>
