--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Size/AllSizeManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Size/AllSizeManager.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "AllSizeManager";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>AllSizeManager</h1>
