--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/TheLoaiDetail.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/TheLoaiDetail.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "TheLoaiDetail";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>TheLoaiDetail</h1>
