--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/AllThuongHieuManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/AllThuongHieuManager.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "AllThuongHieuManager";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>AllThuongHieuManager</h1>
