--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/CreateThuongHieu.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/CreateThuongHieu.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "CreateThuongHieu";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>CreateThuongHieu</h1>
