code voucher chua css
code voucher chua css ngon

--- a/HN120_ShopQuanAo.View/Views/Home/Index.cshtml
+++ b/HN120_ShopQuanAo.View/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                 <h3>Categories</h3>
                 <ul>
                     <li class="has-sub">
-                        <a href="#"><i class="fa fa-caret-right"></i> women</a>
+                        <a href="#"><i class="fa fa-caret-right"></i> men</a>
                         <ul class="categorie_sub">
                             <li>
                                 <a href="#"><i class="fa fa-caret-right"></i> Accessories</a>
@@ -195,8 +195,8 @@
                     <div class="single_slider" style="background-image: url(/img/slider/slide_1.png)">
                         <div class="slider_content">
                             <div class="slider_content_inner">
-                                <h1>Women's Fashion</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                                <h1>Men's Fashion</h1>
+                                <p>Luôn đặt chất lượng lên hàng đầu </p>
                                 <a href="#">shop now</a>
                             </div>
                         </div>
