--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -74,7 +74,7 @@
                             <li class="btn_fm_danhsachcd btn_li">
                                 <img class="listy_dw" src="./Images/icon-liststyle.svg" alt="">
                                 <img class="listy_hv" src="./Images/icon-liststyle-hv.svg" alt="">
-                                <a href="#">Quản lý Voucher </a>
+                                <a href="GetAllVoucher">Quản lý Voucher </a>
                             </li>
                             <li class="btn_fm_danhsachcd btn_li">
                                 <img class="listy_dw" src="./Images/icon-liststyle.svg" alt="">
@@ -104,7 +104,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="can_hv">
+                    <li class="GetAllVoucher">
                         <button class="row_menu accordion btnc">
                             <img src="./Images/icons8-warning-50.png" alt="" class="icon_dark_click icon_ward">
                             <img src="./Images/icons8-warning-50 (1).png" alt="" class="icon_light_click icon_ward">
@@ -115,7 +115,6 @@
                     </li>
                 </ul>
             </div>
-
             <div class="saidenav_bot">
                 <span class="un_collapsei">
                     <button class="btn_collapse">
@@ -145,7 +144,7 @@
             </main>
         </div>
 
-        
+
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
