--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Voucher/GetAllVoucher.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Voucher/GetAllVoucher.cshtml
@@ -1,118 +1,251 @@
 ﻿@model IEnumerable<HN120_ShopQuanAo.Data.Models.Voucher>
 
 @{
-    ViewData["Title"] = "GetAllVoucher";
+    ViewData["Title"] = "Quản lý Voucher";
 }
 
-<h1>GetAllVoucher</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>@ViewData["Title"]</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
 
-<p>
-    <a asp-action="CreateVC">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.MaVoucher)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DieuKienGiam)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GiaGiamToiThieu)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GiaGiamToiDa)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NgayBatDau)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NgayKetThuc)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.KieuGiamGia)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GiaTriGiam)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SoLuong)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TrangThai)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaVoucher)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DieuKienGiam)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GiaGiamToiThieu)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GiaGiamToiDa)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NgayBatDau)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NgayKetThuc)
-            </td>
-                <td>
-                    @if (item.KieuGiamGia == 0)
-                    {
-                        <div style="color:red">Giảm Theo Tiền Mặt</div>
-                    }
-                    else
-                    {
-                        <div style="color:green">Giảm Theo Phần Trăm</div>
-                    }
+        h1 {
+            margin-bottom: 20px;
+        }
 
-                </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GiaTriGiam)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SoLuong)
-            </td>
-                <td>
-                    @{
-                        if (item.TrangThai == 1)
-                        {
-                            <div style="color:green"> Sử dụng </div>
-                        }
-                        else
-                        {
-                            <div style="color:red">Không sử dụng</div>
-                        }
-                    }
-                </td>
-            <td>
-                    @Html.ActionLink("Sửa", "UpdateVC", new { id = item.MaVoucher })
-@*                 @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ }) *@
-                    @if (item.TrangThai == 1)
-                    {
-                        <button class="btn btn-danger">
-                            @Html.ActionLink("Không sử dụng", "KoSuDung", new { ma = item.MaVoucher }, new { @style = "color:blue;" })
-                        </button>
-                    }
-                    else
-                    {
-                        <button class="btn btn-success">
-                            @Html.ActionLink("Sử dụng", "SuDung", new { ma = item.MaVoucher }, new { @style = "color:blue;" })
-                        </button>
-                    }
-            </td>
+        .input-group {
+            max-width: 400px;
+            margin-bottom: 20px;
+        }
 
-        </tr>
-}
-    </tbody>
-</table>
+        .table {
+            width: 100%;
+            margin-bottom: 1rem;
+            color: #212529;
+            border-collapse: collapse;
+        }
+
+            .table th, .table td {
+                padding: 0.75rem;
+                vertical-align: top;
+                border-top: 1px solid #dee2e6;
+            }
+
+            .table thead th {
+                vertical-align: bottom;
+                border-bottom: 2px solid #dee2e6;
+            }
+
+        .table-bordered {
+            border: 1px solid #dee2e6;
+        }
+
+            .table-bordered th, .table-bordered td {
+                border: 1px solid #dee2e6;
+            }
+
+        .table .thead-dark th {
+            color: #fff;
+            background-color: #343a40;
+            border-color: #454d55;
+        }
+
+        .text-danger {
+            color: red !important;
+        }
+
+        .text-success {
+            color: green !important;
+        }
+
+        .btn-sm {
+            padding: 0.25rem 0.5rem;
+            font-size: 0.875rem;
+            line-height: 1.5;
+            border-radius: 0.2rem;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            color: #fff;
+            padding: 0.375rem 0.75rem;
+            font-size: 1rem;
+            border-radius: 0.2rem;
+        }
+
+            .btn-primary:hover {
+                background-color: #0056b3;
+                border-color: #004085;
+            }
+
+        .btn-danger {
+            background-color: #dc3545;
+            border-color: #dc3545;
+            color: #fff;
+            padding: 0.375rem 0.75rem;
+            font-size: 1rem;
+            border-radius: 0.2rem;
+        }
+
+            .btn-danger:hover {
+                background-color: #c82333;
+                border-color: #bd2130;
+            }
+
+        .btn-success {
+            background-color: #28a745;
+            border-color: #28a745;
+            color: #fff;
+            padding: 0.375rem 0.75rem;
+            font-size: 1rem;
+            border-radius: 0.2rem;
+        }
+
+            .btn-success:hover {
+                background-color: #218838;
+                border-color: #1e7e34;
+            }
+
+        .btn-outline-secondary {
+            color: #6c757d;
+            background-color: transparent;
+            background-image: none;
+            border-color: #6c757d;
+        }
+
+            .btn-outline-secondary:hover {
+                color: #fff;
+                background-color: #6c757d;
+                border-color: #6c757d;
+            }
+    </style>
+</head>
+<body>
+    <h1>Quản lý Voucher</h1>
+
+    <p>
+        <a asp-action="CreateVC" class="btn btn-primary">Thêm mới</a>
+    </p>
+
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Tìm kiếm Voucher theo mã" aria-label="Tìm kiếm Voucher theo mã" aria-describedby="button-addon2" id="searchBox">
+        <button class="btn btn-outline-secondary" type="button" id="button-addon2" onclick="searchVoucher()">
+            <i class="fa fa-search"></i> Tìm kiếm
+        </button>
+    </div>
+
+    <table class="table table-bordered">
+        <thead class="thead-dark">
+            <tr>
+                <th>STT</th>
+                <th>Mã Voucher</th>
+                <th>kiểu giảm giá</th>
+                <th>Gía giảm tối thiểu</th>
+                <th>Gía giảm tối đa</th>
+                <th>Số tiền cần</th>
+                <th>Giá trị</th>
+                <th>Ngày áp dụng</th>
+                <th>Ngày kết thúc</th>
+                <th>Số lượng</th>
+                <th>Tình trạng</th>
+                <th>Trạng thái</th>
+                <th>Hành động 1</th>
+                <th>Hành động 2</th>
+            </tr>
+        </thead>
+        <tbody id="voucherTableBody">
+            @{
+                var index = 1;
+                foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@index</td>
+                        <td>@Html.DisplayFor(modelItem => item.MaVoucher)</td>
+                        <td>
+                            @if (item.KieuGiamGia == 0)
+                            {
+                                <span class="text-danger">Giảm Theo Tiền Mặt</span>
+                            }
+                            else
+                            {
+                                <span class="text-success">Giảm Theo Phần Trăm</span>
+                            }
+                        </td>
+                        <td>@Html.DisplayFor(modelItem => item.GiaGiamToiThieu) VND</td>
+                        <td>@Html.DisplayFor(modelItem => item.GiaGiamToiDa) VND</td>
+                        <td>@Html.DisplayFor(modelItem => item.GiaTriGiam) VND</td>
+                        <td>@Html.DisplayFor(modelItem => item.NgayBatDau)</td>
+                        <td>@Html.DisplayFor(modelItem => item.NgayKetThuc)</td>
+                        <td>@Html.DisplayFor(modelItem => item.SoLuong)</td>
+                        <td>@Html.DisplayFor(modelItem => item.DieuKienGiam)</td>
+                        <td>
+                            @{
+                                if (item.TrangThai == 1)
+                                {
+                                    <span class="text-success">Còn khuyến mãi</span>
+                                }
+                                else
+                                {
+                                    <span class="text-danger">Hết khuyến mãi</span>
+                                }
+                            }
+                        </td>
+                        <td>
+                            @{
+                                if (item.TrangThai == 1)
+                                {
+                                    <span class="text-success">Sử dụng</span>
+                                }
+                                else
+                                {
+                                    <span class="text-danger">Không sử dụng</span>
+                                }
+                            }
+                        </td>
+                        <td>
+                            
+                            @if (item.TrangThai == 1)
+                            {
+                                @Html.ActionLink("OFF", "KoSuDung", new { ma = item.MaVoucher }, new { @class = "btn btn-danger btn-sm text-white" })
+                            }
+                            else
+                            {
+                                @Html.ActionLink("ON", "SuDung", new { ma = item.MaVoucher }, new { @class = "btn btn-success btn-sm text-white" })
+                            }
+                        </td>
+                        <td>@Html.ActionLink("Sửa", "UpdateVC", new { id = item.MaVoucher }, new { @class = "btn btn-success btn-sm" })</td>
+                    </tr>
+                    index++;
+                }
+            }
+        </tbody>
+    </table>
+
+    <script>
+        function searchVoucher() {
+            var input, filter, table, tr, td, i, txtValue;
+            input = document.getElementById("searchBox");
+            filter = input.value.toUpperCase();
+            table = document.getElementById("voucherTableBody");
+            tr = table.getElementsByTagName("tr");
+
+            for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[1];
+                if (td) {
+                    txtValue = td.textContent || td.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }
+            }
+        }
+    </script>
+</body>
+</html>
