--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/AllChiTietSpManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/AllChiTietSpManager.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "AllChiTietSpManager";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
+
 }
 
 <h1></h1>
@@ -14,78 +15,80 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.SKU)
+                STT
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MaSp)
+               Tên 
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MaSize)
+              Size
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MaMau)
+               Màu
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MaKhuyenMai)
+                Khuyến mại
+                </th>
+                <th>
+               chất liệu
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MaChatLieu)
+                ảnh
+                </th>
+            <th>
+               giá bán 
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.UrlAnhSpct)
+                Số Lượng
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.GiaBan)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SoLuongTon)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TrangThai)
+               Trạng Thái 
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.SKU)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaSp)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaSize)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaMau)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaKhuyenMai)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaChatLieu)
-            </td>
-                <td >
-                                                <img src="~/photoSanPhamCT/@item.UrlAnhSpct" alt="Combo Image" width="100" height="100" />
-                    @*<img src="~/photoBooks/@item.MainPhoto" class="rounded float-start" alt="...">*@
-                                </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GiaBan)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SoLuongTon)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TrangThai)
-            </td>
-                <td style="text-align : center; margin-bottom : 20px">
-                                    <a asp-action="ChiTietSpDetail" asp-controller="ChiTietSP" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.SKU">Chi Tiết</a>
-                                        <a asp-action="UpdateChiTietSp" asp-controller="ChiTietSP" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.SKU">Sửa</a>    
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SKU)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MaSp)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MaSize)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MaMau)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MaKhuyenMai)
+                </td>
 
-                    </td>
-        </tr>
-}
+                <td >
+                     <img src="~/photoSanPhamCT/@item.UrlAnhSpct" alt="Combo Image" width="100" height="100" />
+                    @*<img src="~/photoBooks/@item.MainPhoto" class="rounded float-start" alt="...">*@
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DonGia)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.GiaBan)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SoLuongTon)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TrangThai)
+                </td>
+                    <td style="text-align : center; margin-bottom : 20px">
+                                        <a asp-action="ChiTietSpDetail" asp-controller="ChiTietSP" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.SKU">Chi Tiết</a>
+                                            <a asp-action="UpdateChiTietSp" asp-controller="ChiTietSP" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.SKU">Sửa</a>    
+
+                        </td>
+            </tr>
+        }
     </tbody>
 </table>
