--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/ChiTietSpDetail.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/ChiTietSpDetail.cshtml
@@ -41,23 +41,19 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.MaKhuyenMai)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MaChatLieu)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MaChatLieu)
-        </dd>
+
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UrlAnhSpct)
         </dt>
          <dt >
-                                            
+
                                 </dt>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GiaBan)
+            @Html.DisplayNameFor(model => model.DonGia)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GiaBan)
+            @Html.DisplayFor(model => model.DonGia)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.SoLuongTon)
