--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/CreateChiTietSp.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/CreateChiTietSp.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-4">
         <form asp-action="CreateChiTietSp">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+
             <div class="form-group">
                 <label asp-for="MaSp" class="control-label"></label>
                 <input asp-for="MaSp" class="form-control" />
@@ -34,27 +34,23 @@
                 <input asp-for="MaKhuyenMai" class="form-control" />
                 <span asp-validation-for="MaKhuyenMai" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="MaChatLieu" class="control-label"></label>
-                <input asp-for="MaChatLieu" class="form-control" />
-                <span asp-validation-for="MaChatLieu" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="UrlAnhSpct" class="control-label"></label>
                 <input asp-for="UrlAnhSpct" type="file" class="form-control" />
                 <span asp-validation-for="UrlAnhSpct" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GiaBan" class="control-label"></label>
-                <input asp-for="GiaBan" class="form-control" />
-                <span asp-validation-for="GiaBan" class="text-danger"></span>
+                <label asp-for="DonGia" class="control-label"></label>
+                <input asp-for="DonGia" class="form-control" />
+                <span asp-validation-for="DonGia" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SoLuongTon" class="control-label"></label>
                 <input asp-for="SoLuongTon" class="form-control" />
                 <span asp-validation-for="SoLuongTon" class="text-danger"></span>
             </div>
-            
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -67,5 +63,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
