--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/UpdateChiTietSp.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/UpdateChiTietSp.cshtml
@@ -18,7 +18,7 @@
                 <input asp-for="SKU" class="form-control" />
                 <span asp-validation-for="SKU" class="text-danger"></span>
             </div>
-            
+
             <div class="form-group">
                 <label asp-for="MaKhuyenMai" class="control-label"></label>
                 <input asp-for="MaKhuyenMai" class="form-control" />
@@ -30,16 +30,16 @@
                 <span asp-validation-for="UrlAnhSpct" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GiaBan" class="control-label"></label>
-                <input asp-for="GiaBan" class="form-control" />
-                <span asp-validation-for="GiaBan" class="text-danger"></span>
+                <label asp-for="DonGia" class="control-label"></label>
+                <input asp-for="DonGia" class="form-control" />
+                <span asp-validation-for="DonGia" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SoLuongTon" class="control-label"></label>
                 <input asp-for="SoLuongTon" class="form-control" />
                 <span asp-validation-for="SoLuongTon" class="text-danger"></span>
             </div>
-            
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -52,5 +52,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
