--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/AllSanPhamManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/AllSanPhamManager.cshtml
@@ -1,81 +1,130 @@
-﻿@model IEnumerable<HN120_ShopQuanAo.Data.Models.SanPham>
+﻿﻿@using HN120_ShopQuanAo.Data.Models;
+@model IEnumerable<HN120_ShopQuanAo.Data.Models.SanPham>
 
 @{
     ViewData["Title"] = "AllSanPhamManager";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
+    List<SanPham> lstSP = ViewBag.lstSP as List<SanPham>;
+    List<ThuongHieu> lstTH = ViewBag.lstTH as List<ThuongHieu>;
+    List<TheLoai> lstTL = ViewBag.lstTL as List<TheLoai>;
+    List<ChatLieu> lstCL = ViewBag.lstCL as List<ChatLieu>;
+
 }
 
-<h1>Ql Sản Phẩm</h1>
-
+<div style="background : #fff;">
+<h1 style="text-align: center">Ql Sản Phẩm</h1>
+<div>
 <p>
     <a class="btn btn-primary" asp-action="CreateSanPham">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
+            <tr>
             <th>
-                @Html.DisplayNameFor(model => model.MaSp)
+                STT
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MaThuongHieu)
+               Tên 
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MaTheLoai)
+              Thương Hiệu
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.UrlAvatar)
+               Thể Loại
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TenSP)
+               Chất Liệu
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Mota)
+                Ảnh
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TongSoLuong)
+               Mô Tả 
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TrangThai)
+                Số Lượng
+            </th>
+            <th>
+               Trạng Thái 
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaSp)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaThuongHieu)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaTheLoai)
-            </td>
-                <td >
-                                    <img src="~/photoSanPham/@item.UrlAvatar" alt="Combo Image" width="100" height="100" />
-                    @*<img src="~/photoBooks/@item.MainPhoto" class="rounded float-start" alt="...">*@
+                @{
+
+                    int i = 1;
+                }
+                @foreach (var item in lstSP)
+                {
+                    <tr>
+                        <td>
+                            @i
+                        </td>
+                            <td>
+                            @item.TenSP
+                        </td>
+                        <td>
+                            @{
+                                var thuongHieu = lstTH.FirstOrDefault(th => th.MaThuongHieu == item.MaThuongHieu)?.TenThuongHieu ?? "N/A";
+                            }
+                            @thuongHieu
+                        </td>
+                        <td>
+                            @{
+                                var theLoai = lstTL.FirstOrDefault(tl => tl.MaTheLoai == item.MaTheLoai)?.TenTheLoai ?? "N/A";
+                            }
+                            @theLoai
+                        </td>
+                            <td>
+                            @{
+                                var chatlieu = lstCL.FirstOrDefault(tl => tl.MaChatLieu == item.MaChatLieu)?.TenChatLieu ?? "N/A";
+                            }
+                            @chatlieu
                             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TenSP)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Mota)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TongSoLuong)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TrangThai)
-            </td>
-                <td style="text-align : center; margin-bottom : 20px">
-                        <a asp-action="SanPhamDetail" asp-controller="SanPham" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.MaSp">Chi Tiết</a>
-                        <a asp-action="UpdateSanPham" asp-controller="SanPham" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.MaSp">Sửa</a>    
-                            
-                                       <a asp-action="AllChiTietSpManager" asp-controller="ChiTietSP" asp-area="Admin" id="btn_chitiet_detail" class="btn btn-primary" type="button" asp-route-id="@item.MaSp">Xem Sản Phẩm Chi Tiết</a>
-                
-                </td>
-        </tr>
-        }
+                        <td >
+                                    <img src="~/photoSanPham/@item.UrlAvatar" alt="Combo Image" width="100" height="100" />
+                            @*<img src="~/photoBooks/@item.MainPhoto" class="rounded float-start" alt="...">*@
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TongSoLuong)
+                        </td>
+                        <td>
+                            @{
+                                var trangThai = item.TrangThai == 1 && item.TongSoLuong > 0 ? "Khả Dụng" :
+                                                item.TrangThai == 1 || item.TongSoLuong == 0 ? "Hết Hàng" : "Không Khả Dụng";
+                            }
+                            @trangThai
+                        </td>
+                        <td style="text-align : center; margin-bottom : 20px">
+                            @if (item.TrangThai == 0)
+                            {
+                                                        <form asp-action="UpdateStatusSanPhamKKD" method="post" style="display:inline;">
+                                                    <input type="hidden" name="id" value="@item.MaChatLieu" />
+                                                            <button type="submit" class="btn btn-secondary">Bật</button>
+                                                </form>
+                            }
+                            @if (item.TrangThai == 1)
+                            {
+                                                   <form asp-action="UpdateStatusSanPhamKD" method="post" style="display:inline;">
+                                                            <input type="hidden" name="id" value="@item.MaSp" />
+                                                    <button type="submit" class="btn btn-secondary">Tăt</button>
+                                                </form>
+                            }
+
+                                    <a asp-action="SanPhamDetail" asp-controller="SanPham" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.MaSp">Chi Tiết</a>
+                                    <a asp-action="delete" asp-controller="SanPham" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.MaSp">xóa</a>
+
+                                    <a asp-action="UpdateSanPham" asp-controller="SanPham" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.MaSp">Sửa</a>    
+                                    <a asp-action="AllChiTietSpManager" asp-controller="ChiTietSP" asp-area="Admin" id="btn_chitiet_detail" class="btn btn-primary" type="button" asp-route-id="@item.MaSp">Them SP Chi Tiết</a>
+
+                        </td>
+                    </tr>
+                    i++;
+                }
     </tbody>
+
 </table>
+</div>
+</div>
