--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/CreateSanPham.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/CreateSanPham.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="MaTheLoai" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="MaChatLieu" class="control-label"></label>
+                <input asp-for="MaChatLieu" class="form-control" />
+                <span asp-validation-for="MaChatLieu" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="UrlAvatar" class="control-label"></label>
                 <input asp-for="UrlAvatar" type="file" class="form-control" />
                 <span asp-validation-for="UrlAvatar" class="text-danger"></span>
