--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/SanPhamDetail.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/SanPhamDetail.cshtml
@@ -30,6 +30,12 @@
             @Html.DisplayFor(model => model.MaTheLoai)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.MaChatLieu)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.MaChatLieu)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UrlAvatar)
         </dt>
         <dd class = "col-sm-10">
@@ -62,6 +68,5 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
 </div>
