--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/AllKhuyenMaiManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/AllKhuyenMaiManager.cshtml
@@ -1,54 +1,61 @@
 ﻿@model IEnumerable<HN120_ShopQuanAo.Data.Models.KhuyenMai>
 
 @{
-    ViewData["Title"] = "AllKhuyenMaiManager";
+    ViewData["Title"] = "All KhuyenMai Manager";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>AllKhuyenMaiManager</h1>
+<h1>All Khuyen Mai Manager</h1>
+<div class="form-group">
+    <form method="get" asp-action="AllKhuyenMaiManager" asp-controller="KhuyenMai" asp-area="Admin">
+        <div class="row">
+            <div class="col-md-6">
+                <input type="text" name="searchString" id="searchInput" class="form-control" placeholder="Tìm kiếm tên chất liệu" value="@ViewData["CurrentFilter"]" onchange="this.form.submit()" />
+            </div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+        </div>
+    </form>
+</div>
+<div>
+    <a asp-action="CreateKhuyenMai" class="btn btn-primary">Thêm Chất Liệu</a>
+</div>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.MaKhuyenMai)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TenKhuyenMai)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PhanTramGiam)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TrangThai)
-            </th>
-            <th></th>
+            <th>Mã Khuyen Mai</th>
+            <th>Tên Khuyen Mai</th>
+            <th>Số % giảm</th>
+            <th>Trạng Thái</th>
+            <th>Hành Động</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaKhuyenMai)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TenKhuyenMai)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhanTramGiam)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TrangThai)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+                        <tr>
+                                <td>@item.MaKhuyenMai</td>
+                                <td>@item.TenKhuyenMai</td>
+                                <td>@item.PhanTramGiam</td>
+                                <td>@(item.TrangThai == 1 ? "Khả Dụng" : "Không Khả Dụng")</td>
+                            <td>
+                                        <a asp-action="KhuyenMaiDetail" asp-route-id="@item.MaKhuyenMai" class="btn btn-info">Chi Tiết</a>
+                                        <a asp-action="UpdateKhuyenMai" asp-route-id="@item.MaKhuyenMai" class="btn btn-warning">Cập Nhật</a>
+                    @if (item.TrangThai == 1)
+                    {
+                                                        <form asp-action="UpdateStatusKhuyenMaiKKD" method="post" style="display:inline;">
+                                                            <input type="hidden" name="id" value="@item.MaKhuyenMai" />
+                                                    <button type="submit" class="btn btn-secondary">Tăt</button>
+                                                </form>
+                    }
+                    else
+                    {
+                                                        <form asp-action="UpdateStatusKhuyenMaiKD" method="post" style="display:inline;">
+                                                            <input type="hidden" name="id" value="@item.MaKhuyenMai" />
+                                                    <button type="submit" class="btn btn-success">Bật</button>
+                                                </form>
+                    }
+                            </td>
+                        </tr>
+        }
     </tbody>
 </table>
