--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/UpdateKhuyenMai.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/UpdateKhuyenMai.cshtml
@@ -6,18 +6,20 @@
 }
 
 <h1>UpdateKhuyenMai</h1>
+@if (TempData["errorMessage"] != null)
+{
+                <div class="alert alert-danger">
+        @TempData["errorMessage"]
+                </div>
+}
 
-<h4>KhuyenMai</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="UpdateKhuyenMai">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="MaKhuyenMai" class="control-label"></label>
-                <input asp-for="MaKhuyenMai" class="form-control" />
-                <span asp-validation-for="MaKhuyenMai" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="MaKhuyenMai" />
+            
             <div class="form-group">
                 <label asp-for="TenKhuyenMai" class="control-label"></label>
                 <input asp-for="TenKhuyenMai" class="form-control" />
