--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/AllTheLoaiManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/AllTheLoaiManager.cshtml
@@ -7,48 +7,56 @@
 
 <h1>AllTheLoaiManager</h1>
 
-<p>
-    <a asp-action="CreateTheLoai">Create New</a>
-</p>
+<div class="form-group">
+    <form method="get" asp-action="AllTheLoaiManager" asp-controller="TheLoai" asp-area="Admin">
+        <div class="row">
+            <div class="col-md-6">
+                <input type="text" name="searchString" id="searchInput" class="form-control" placeholder="Tìm kiếm tên " value="@ViewData["CurrentFilter"]" onchange="this.form.submit()" />
+            </div>
+
+        </div>
+    </form>
+</div>
+<div>
+    <a asp-action="CreateTheLoai" class="btn btn-primary">Thêm Thể Loại</a>
+</div>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.MaTheLoai)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TenTheLoai)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MoTa)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TrangThai)
-            </th>
-            <th></th>
+            <th>Mã </th>
+            <th>Tên </th>
+            <th>Mô Tả</th>
+            <th>Trạng Thái</th>
+            <th>Hành Động</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaTheLoai)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TenTheLoai)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MoTa)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TrangThai)
-            </td>
-                <td style="text-align : center; margin-bottom : 20px">
-                <a asp-action="TheLoaiDetail" asp-controller="TheLoai" asp-area="Admin" class="btn btn-primary" asp-route-idbookrt="@item.MaTheLoai">Chi Tiết</a>
-                <a asp-action="UpdateTheLoai" asp-controller="TheLoai" asp-area="Admin" class="btn btn-primary" asp-route-idbookrt="@item.MaTheLoai">Sửa</a>    
-
-                </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+                        <tr>
+                                <td>@item.MaTheLoai</td>
+                                <td>@item.TenTheLoai</td>
+                            <td>@item.MoTa</td>
+                                <td>@(item.TrangThai == 1 ? "Khả Dụng" : "Không Khả Dụng")</td>
+                            <td>
+                                        <a asp-action="TheLoaiDetail" asp-route-id="@item.MaTheLoai" class="btn btn-info">Chi Tiết</a>
+                                        <a asp-action="UpdateTheLoai" asp-route-id="@item.MaTheLoai" class="btn btn-warning">Cập Nhật</a>
+                    @if (item.TrangThai == 1)
+                    {
+                                                <form asp-action="UpdateStatusSanPhamKKD" method="post" style="display:inline;">
+                                                    <input type="hidden" name="id" value="@item.MaTheLoai" />
+                                                    <button type="submit" class="btn btn-secondary">Tăt</button>
+                                                </form>
+                    }
+                    else
+                    {
+                                                <form asp-action="UpdateStatusSanPhamKD" method="post" style="display:inline;">
+                                                    <input type="hidden" name="id" value="@item.MaTheLoai" />
+                                                    <button type="submit" class="btn btn-success">Bật</button>
+                                                </form>
+                    }
+                            </td>
+                        </tr>
+        }
     </tbody>
 </table>
