--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/UpdateTheLoai.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/UpdateTheLoai.cshtml
@@ -8,16 +8,19 @@
 <h1>UpdateTheLoai</h1>
 
 <h4>TheLoai</h4>
+@if (TempData["errorMessage"] != null)
+{
+                <div class="alert alert-danger">
+        @TempData["errorMessage"]
+                </div>
+}
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="UpdateTheLoai">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="MaTheLoai" class="control-label"></label>
-                <input asp-for="MaTheLoai" class="form-control" />
-                <span asp-validation-for="MaTheLoai" class="text-danger"></span>
-            </div>
+                <input type="hidden" asp-for="MaTheLoai" />
+
             <div class="form-group">
                 <label asp-for="TenTheLoai" class="control-label"></label>
                 <input asp-for="TenTheLoai" class="form-control" />
@@ -28,11 +31,7 @@
                 <input asp-for="MoTa" class="form-control" />
                 <span asp-validation-for="MoTa" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="TrangThai" class="control-label"></label>
-                <input asp-for="TrangThai" class="form-control" />
-                <span asp-validation-for="TrangThai" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
