--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/AllKhuyenMaiManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/AllKhuyenMaiManager.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>All Khuyen Mai Manager</h1>
+<h1>Quản Lý Khuyến Mại</h1>
 <div class="form-group">
     <form method="get" asp-action="AllKhuyenMaiManager" asp-controller="KhuyenMai" asp-area="Admin">
         <div class="row">
@@ -17,7 +17,7 @@
     </form>
 </div>
 <div>
-    <a asp-action="CreateKhuyenMai" class="btn btn-primary">Thêm Chất Liệu</a>
+    <a asp-action="CreateKhuyenMai" class="btn btn-primary">Thêm Mới</a>
 </div>
 <table class="table">
     <thead>
