--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/AllSanPhamManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/AllSanPhamManager.cshtml
@@ -59,7 +59,7 @@
 
                     int i = 1;
                 }
-                @foreach (var item in lstSP)
+                @foreach (var item in Model)
                 {
                     <tr>
                         <td>
@@ -120,10 +120,9 @@
                             }
 
                                     <a asp-action="SanPhamDetail" asp-controller="SanPham" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.MaSp">Chi Tiết</a>
-                                    <a asp-action="delete" asp-controller="SanPham" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.MaSp">xóa</a>
-
                                     <a asp-action="UpdateSanPham" asp-controller="SanPham" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.MaSp">Sửa</a>    
                                     <a asp-action="AllChiTietSpManager" asp-controller="ChiTietSP" asp-area="Admin" id="btn_chitiet_detail" class="btn btn-primary" type="button" asp-route-id="@item.MaSp">Them SP Chi Tiết</a>
+                                                <a asp-action="AddChiTietSp" asp-route-id="@item.MaSp" class="btn btn-primary">Thêm Chi Tiết</a>
 
                         </td>
                     </tr>
